--- a/deployment/ssh_key_setup.yml
+++ b/deployment/ssh_key_setup.yml
@@ -1,14 +1,13 @@
 ---
 - name: Virtual Machine Setup
   gather_facts: False
-  hosts: virtual_machine
+  hosts: elder_virtual_machine
   remote_user: fbabin
   become: yes
   vars:
     user: fbabin
+    cluster: 3
 
-  tasks:
-    - name: Add ssh key
-      when: user is defined
-      authorized_key: user={{ user }} key="{{ lookup('file', '~/.ssh/id_ecdsa.pub')}}"
+  roles:
+    - ssh_config
 ...
