--- a/deployment/virtual_machine_setup.yml
+++ b/deployment/virtual_machine_setup.yml
@@ -7,6 +7,8 @@
   vars:
     user: fbabin
 
-  roles:
-    - ssh_config
+  tasks:
+    - name: Wait for new target connection to become reachable/usable
+      wait_for_connection:
+
 ...
