splitting setup into roles

--- a/deployment/ssh_key_setup.yml
+++ b/deployment/ssh_key_setup.yml
@@ -10,4 +10,12 @@
 
   roles:
     - ssh_config
+    - static_ip
+  
+  post_tasks:
+    - name: restart vm
+      command: reboot
+      async: 1
+      poll: 0
+      ignore_errors: yes
 ...
