finished utils install and update

--- a/deployment/virtual_machine_setup.yml
+++ b/deployment/virtual_machine_setup.yml
@@ -7,8 +7,10 @@
   vars:
     user: fbabin
 
-  tasks:
+  pre_tasks:
     - name: Wait for new target connection to become reachable/usable
       wait_for_connection:
-
+  
+  roles:
+    - utils_install
 ...
