--- a/deployment/roles/ssh_config/tasks/main.yml
+++ b/deployment/roles/ssh_config/tasks/main.yml
@@ -5,24 +5,24 @@
 
 - name: Change SSH port
   lineinfile:
-    dest=/etc/ssh/sshd_config
-    regexp='^Port'
-    line="Port 54321"
-    state=present
-    backup=yes
+    dest: /etc/ssh/sshd_config
+    regexp: '^Port'
+    line: "Port 54321"
+    state: present
+    backup: yes
 
 - name: Allow PubkeyAuthentication
   lineinfile:
-    dest=/etc/ssh/sshd_config
-    regexp='^PubkeyAuthentication'
-    line="PubkeyAuthentication yes"
-    state=present
-    backup=yes
+    dest: /etc/ssh/sshd_config
+    regexp: '^PubkeyAuthentication'
+    line: "PubkeyAuthentication yes"
+    state: present
+    backup: yes
 
 - name: Forbid Root Login
   lineinfile:
-    dest=/etc/ssh/sshd_config
-    regexp='^PermitRootLogin'
-    line="PermitRootLogin no"
-    state=present
-    backup=yes
+    dest: /etc/ssh/sshd_config
+    regexp: '^PermitRootLogin'
+    line: "PermitRootLogin no"
+    state: present
+    backup: yes
